--- a/tmnt.html
+++ b/tmnt.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<div id="banner">
-			<img id="ban" src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/banner.png" alt="Rancid Tomatoes" />
+			<img id="bannerimage" src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/banner.png" alt="Rancid Tomatoes" />
 		</div>
 
 		<h1>TMNT (2007)</h1>
@@ -73,7 +73,7 @@
 						<p>
 							<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
 							Peter Debruge <br />
-							Variety
+							<span class="emph">Variety</span>
 						</p>
 					</div>
 
@@ -88,7 +88,7 @@
 						<p>
 							<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
 							Todd Gilchrist <br />
-							IGN Movies
+							<span class="emph">IGN Movies</span>
 						</p>
 					</div>
 
@@ -117,7 +117,7 @@
 						<p>
 							<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
 							Joshua Tyler <br />
-							CinemaBlend.com
+							<span class="emph">CinemaBlend.com</span>
 						</p>
 					</div>
 				</div>
@@ -134,7 +134,7 @@
 						<p>
 							<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
 							Jeannette Catsoulis <br />
-							New York Times
+							<span class="emph">New York Times</span>
 						</p>
 					</div>
 
@@ -149,7 +149,7 @@
 						<p>
 							<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
 							Ed Gonzalez <br />
-							Slant Magazine
+							<span class="emph">Slant Magazine</span>
 						</p>
 					</div>
 
@@ -164,7 +164,7 @@
 						<p>
 							<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
 							Mark Palermo <br />
-							Coast (Halifax, Nova Scotia)
+							<span class="emph">Coast (Halifax, Nova Scotia)</span>
 						</p>
 					</div>
 
@@ -179,7 +179,7 @@
 						<p>
 							<img src="http://www.cs.washington.edu/education/courses/cse190m/09sp/homework/2/critic.gif" alt="Critic" />
 							Steve Rhodes <br />
-							Internet Reviews
+							<span class="emph">Internet Reviews</span>
 						</p>
 					</div>
 				</div>
